--- a/project_d.html
+++ b/project_d.html
@@ -46,10 +46,10 @@
 							<ul>
 								<li><a href="index.html#portfolio" id="backto-portfolio-link"><span class="icon solid fa-briefcase" style="color: red">Back to My Portfolio</span></a></li>
 								<li><a href="#aboutthisproject"><span class="icon solid fa-book-open">About this Project</span></a></li>
-								<li><a href="#dashboard"><span class="icon solid fa-gauge">Tableau Dashboard</span></a></li>
-								<li><a href="#public"><span class="icon solid fa-table-columns">Tableau Public</span></a></li>
-								<li><a href="#worksheets"><span class="icon solid fa-chart-simple">Worksheets</span></a></li>
-								<li><a href="#datasetinfodownload"><span class="icon solid fa-download">Dataset Info & Download</span></a></li>
+								<li><a href="#dashboard_sales"><span class="icon solid fa-gauge">Sales Data Dashboard</span></a></li>
+                                <li><a href="#dashboard_service"><span class="icon solid fa-gauge">Service Data Dashboard</span></a></li>
+								<li><a href="#keyfindings"><span class="icon solid fa-chart-simple">Key Findings</span></a></li>
+								<li><a href="#datasetinfo"><span class="icon solid fa-download">Dataset Information</span></a></li>
 							</ul>
 						</nav>
 				</div>
@@ -85,101 +85,51 @@
                     </div>
                 </section>
 
-				<!-- Dashboard -->
-				<section id="dashboard" class="three">
+				<!-- Dashboard Sales -->
+				<section id="dashboard_sales" class="three">
                     <div class="container">
                         <header>
-                            <h2>- Tableau Dashboard -</h2>
+                            <h2>Cognos Automotive Sales Data Dashboard</h2>
                         </header>
-                        <h3>Logistics Demand by State/City</h3>
-						<img src="images/project_logistics/dashboard_1.png" alt="dashboard" style="border: 5px solid black; width: 100%;">
-                        <br>
-                        <h3>Container Shipping Rate</h3>
-                        <img src="images/project_logistics/dashboard_2.png" alt="dashboard" style="border: 5px solid black; width: 100%;">
+						<img src="images/project_ibm_cognos/sales.png" alt="dashboard" style="border: 5px solid black; width: 86%;">
                     </div>
                 </section>
 
-				<!-- Tableau Public Info -->
-				<section id="public" class="four">
+                <!-- Dashboard Service -->
+				<section id="dashboard_service" class="four">
                     <div class="container">
                         <header>
-                            <h2>Tableau Public Profile & Dashboard Link</h2>
+                            <h2>Cognos Automotive Service and Recalls Data Dashboard</h2>
                         </header>
-						<p>
-							<h3>My Tableau Public Profile Link</h3>
-							<a href="https://public.tableau.com/app/profile/kien.chung" target="_blank">https://public.tableau.com/app/profile/kien.chung</a>
-						</p>
-						<p>
-							<h3>Logistics Demand Dashboard Link</h3>
-							<a href="https://public.tableau.com/app/profile/kien.chung/viz/LogisticsDemand/DemandDataDashboard" target="_blank">https://public.tableau.com/app/profile/kien.chung/viz/LogisticsDemand/DemandDataDashboard</a>
-						</p>
-                        <p>
-							<h3>Logistics Container Shipping Rate Dashboard Link</h3>
-							<a href="https://public.tableau.com/app/profile/kien.chung/viz/LogisticsContainerShippingRatefromStatetoRate/RateDashboard" target="_blank">https://public.tableau.com/app/profile/kien.chung/viz/LogisticsContainerShippingRatefromStatetoRate/RateDashboard</a>
-						</p>
+                        <img src="images/project_ibm_cognos/service.png" alt="dashboard" style="border: 5px solid black; width: 86%;">
                     </div>
                 </section>
 
-				<!-- Worksheets -->
-				<section id="worksheets" class="five">
+                <!-- Findings -->
+				<section id="keyfindings" class="five">
                     <div class="container">
                         <header>
-                            <h2>Worksheets</h2>
+                            <h2>Key Findings</h2>
                         </header>
-
-						<div class="row" style="margin-top: 2px;">
-                            <div class="col-4 col-12-mobile">
-                                <article class="item" style="margin-bottom: 5px;">
-                                    <a href="images/project_logistics/worksheets/1.png" target="_blank" class="image fit"><img src="images/project_logistics/worksheets/1.png" alt="worksheet_1" /></a>
-                                </article>
-                            </div>
-                            <div class="col-4 col-12-mobile">
-                                <article class="item" style="margin-bottom: 5px;">
-                                    <a href="images/project_logistics/worksheets/2.png" target="_blank" class="image fit"><img src="images/project_logistics/worksheets/2.png" alt="worksheet_2" /></a>
-                                </article>
-                            </div>
-							<div class="col-4 col-12-mobile">
-                                <article class="item" style="margin-bottom: 5px;">
-                                    <a href="images/project_logistics/worksheets/3.png" target="_blank" class="image fit"><img src="images/project_logistics/worksheets/3.png" alt="worksheet_3" /></a>
-                                </article>
-                            </div>
+						<div>
+							
 						</div>
-
-						<div class="row" style="margin-top: 2px;">
-                            <div class="col-4 col-12-mobile">
-                                <article class="item" style="margin-bottom: 5px;">
-                                    <a href="images/project_logistics/worksheets/4.png" target="_blank" class="image fit"><img src="images/project_logistics/worksheets/4.png" alt="worksheet_4" /></a>
-                                </article>
-                            </div>
-                            <div class="col-4 col-12-mobile">
-                                <article class="item" style="margin-bottom: 5px;">
-                                    <a href="images/project_logistics/worksheets/5.png" target="_blank" class="image fit"><img src="images/project_logistics/worksheets/5.png" alt="worksheet_5" /></a>
-                                </article>
-                            </div>
-							<div class="col-4 col-12-mobile">
-                                <article class="item" style="margin-bottom: 5px;">
-                                    <a href="images/project_logistics/worksheets/6.png" target="_blank" class="image fit"><img src="images/project_logistics/worksheets/6.png" alt="worksheet_6" /></a>
-                                </article>
-                            </div>
-						</div>
-
                     </div>
                 </section>
-				
-				<!-- Dataset Info & Download -->
-				<section id="datasetinfodownload" class="six">
+
+				<!-- Dataset Info-->
+				<section id="datasetinfo" class="six">
 					<div class="container">
 						<header>
-                            <h2>Dataset Information & Download</h2>
+                            <h2>Dataset Information</h2>
                         </header>
-						<p>Total of 1,263 records - DemandData.xlsx <br>
-                            <a href="images/project_logistics/DemandDataRaw.xlsx" download>[Download raw xlsx-file (86KB) here]</a> <br>
-                            <a href="images/project_logistics/DemandDataCleaned&PivotTable.xlsx" download>[Download cleaned xlsx-file (110KB) here]</a>
-                        </p>
-                        <p>Total of 623,809 records - RateData.xlsx <br>
-                            <a href="images/project_logistics/RateDataRaw.xlsx" download>[Download raw xlsx-file (31.5MB) here]</a> <br>
-                            <a href="images/project_logistics/RateDataCleaned&PivotTable.xlsx" download>[Download cleaned xlsx-file (38.8MB) here]</a>
-                        </p>
+                        <div>
+                            <p>Dataset available on IBM Community website <br>
+                                <a href="https://community.ibm.com/accelerators/?context=analytics&type=Data&industry=Automotive" target="_blank">https://community.ibm.com/accelerators/?context=analytics&type=Data&industry=Automotive</a> <br>
+                                Term of Use <br>
+                                <a href="https://developer.ibm.com/terms/ibm-developer-terms-of-use/">https://developer.ibm.com/terms/ibm-developer-terms-of-use/</a>
+                            </p>
+                        </div>
 					</div>
 				</section>
 
