--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
 												<h3 style="padding: 0.25em;"><strong style="color: white !important;">- ABOUT THIS PROGRAM - <br>IBM Cognos Analytics <br>Certificate</strong></h3>
 											</a>
 										</header>
-										<a href="" target="_blank" class="image fit frame"><img src="" alt="ibm_certificate_3" /></a>
+										<a href="https://coursera.org/verify/VRLMHFSG82F7" target="_blank" class="image fit frame"><img src="images/ibm/ibm_Certificate_Cognos.jpeg" alt="ibm_certificate_3" /></a>
 									</article>
 								</div>
 
