project D now A is complete

--- a/index.html
+++ b/index.html
@@ -187,16 +187,16 @@
 								<!-- A -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin-bottom: 5px;">
-										<a href="project_a.html" class="image fit"><img src="images/project_yelp/yelp.jpg" alt="yelp" /></a>
+										<a href="project_a.html" class="image fit"><img src="images/project_ibm_cognos/poster.jpg" alt="ibm_cognos" /></a>
 										<header style="background-color: rgb(68,68,68);">
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project A</strong></h3>
-											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Yelp Relational Database <br>Business & User Analysis</strong></h3>
+											<h3 style="padding: 0.2em;"><strong style="color: white !important;">IBM Cognos Analytics <br>Automotive Sales & Recalls</strong></h3>
 										</header>
 									</article>
 									<ul class="no-bullets" style="display: inline;"><strong style="font-weight: bold;">- Skills -</strong>
-										<li>SQL / SQLite</li>
-										<li>RDBMS</li>
-										<li>Sublime Text</li>
+										<li>IBM Cognos Analytics</li>
+										<li>Cognos AI Assistant</li>
+										<li>B.I. Dashboard & Visualization</li>
 									</ul>
 								</div>
 
@@ -243,16 +243,16 @@
 								<!-- D -->
 								<div class="col-4 col-12-mobile">
 									<article class="item" style="margin-bottom: 5px;">
-										<a href="project_d.html" class="image fit"><img src="images/project_ibm_cognos/poster.jpg" alt="ibm_cognos" /></a>
+										<a href="project_d.html" class="image fit"><img src="images/project_yelp/yelp.jpg" alt="yelp" /></a>
 										<header style="background-color: rgb(68,68,68);">
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project D</strong></h3>
-											<h3 style="padding: 0.2em;"><strong style="color: white !important;">IBM Cognos Analytics <br>Automotive Sales & Recalls</strong></h3>
+											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Yelp Relational Database <br>Business & User Analysis</strong></h3>
 										</header>
 									</article>
 									<ul class="no-bullets" style="display: inline;"><strong style="font-weight: bold;">- Skills -</strong>
-										<li>IBM Cognos Analytics</li>
-										<li>Cognos AI Assistant</li>
-										<li>B.I. Dashboard & Visualization</li>
+										<li>SQL / SQLite</li>
+										<li>RDBMS</li>
+										<li>Sublime Text</li>
 									</ul>
 								</div>
 
