--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
 										<a href="project_g.html" class="image fit"><img src="images/project_logistics/dashboard.jpg" alt="logistics" /></a>
 										<header style="background-color: rgb(68,68,68);">
 											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Project G</strong></h3>
-											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Excel & Tableau Project <br>Logistics Demand & Shipping Rate Analysis</strong></h3>
+											<h3 style="padding: 0.2em;"><strong style="color: white !important;">Excel & Tableau Project <br>Logistics Demand & Shipping Rate</strong></h3>
 										</header>
 									</article>
 									<ul class="no-bullets" style="display: inline;"><strong style="font-weight: bold;">- Skills -</strong>
