--- a/project_a.html
+++ b/project_a.html
@@ -76,7 +76,7 @@
 							<br>
 							<h4>The purpose of this project is to showcase my skills and knowledge in IBM COGNOS Business Intelligence and Analytics with Watson Software.</h4>
                         </header>
-						<img src="images/project_ibm_cognos/logo.jpeg" alt="cognos_logo" />
+						<img src="images/project_ibm_cognos/logo.jpeg" alt="cognos_logo" width="35%" />
 						<br>
 						<br>
 						<h3>Scenario</h3>
@@ -103,10 +103,10 @@
                             <h2>Snapshots of dashboard</h2>
                         </header>
                         <h3>Sales Data</h3>
-                        <img src="images/project_ibm_cognos/sales.png" alt="dashboard" style="border: 5px solid black; width: 60%;">
+                        <img src="images/project_ibm_cognos/sales.png" alt="dashboard" style="border: 5px solid black; width: 75%;">
                         <p></p>
                         <h3>Service and Recalls Data</h3>
-                        <img src="images/project_ibm_cognos/service.png" alt="dashboard" style="border: 5px solid black; width: 60%;">
+                        <img src="images/project_ibm_cognos/service.png" alt="dashboard" style="border: 5px solid black; width: 75%;">
                     </div>
                 </section>
 
