--- a/project_one.html
+++ b/project_one.html
@@ -255,23 +255,29 @@
 							<p>Project Start Date: December, 2022 </p>
 						</header>
 						<p>
-							<a href="https://github.com/kienvinhchung/kienvinhchung.github.io/blob/main/images/project_1_bike/tripdata.zip" target="_blank">[Download zip file via Github LFS here]</a>
-						</p>
-						<p>
-							Previous 12 months of Cyclistic's trip data 
-							<br>
-							December 2021 to November 2022
-						</p>
-						<p>
-							Total of 5,733,451 trip records within the past 12 months
-							<br>
-							Around 5.7 million rows of raw data
-						</p>
-						<p>
-							After going through preparing, processing, and cleaning stage, <br>there are 5,552,874 rows of complete and reliable data 
-							<br>
-							Approximately 5.5 million trip records ready for analysis
-						</p>
+                            Previous 12 months of Cyclistic's trip data 
+                            <br>
+                            December 2021 to November 2022
+                        </p>
+                        <p>
+                            Total of 5,733,451 trip records within the past 12 months
+                            <br>
+                            Around 5.7 million rows of raw data
+                        </p>
+                        <p>Raw datasets: 12 .CSV files in zipped folder (206MB zipped, 1.08GB unzipped) 
+                            <br>
+                            <a href="https://github.com/kienvinhchung/kienvinhchung.github.io/blob/main/images/project_1_bike/tripdata.zip" target="_blank">[Download zipped file via Github LFS here]</a>
+                        </p>
+                        <p>
+                            After going through preparing, processing, and cleaning stage, there are 5,552,874 rows of complete and reliable data 
+                            <br>
+                            Approximately 5.5 million trip records ready for analysis
+                        </p>
+                        <p>
+                            Clean dataset in CSV file in zipped folder (193MB zipped, 1.03GB unzipped)
+                            <br>
+                            <a href="" target="_blank">[Download clean dataset via Github LFS here]</a>
+                        </p>
 						<p>
 							<table style="border: 3px solid black;">
 								<thead>
