--- a/project_one.html
+++ b/project_one.html
@@ -276,7 +276,7 @@
                         <p>
                             Clean dataset in CSV file in zipped folder (193MB zipped, 1.03GB unzipped)
                             <br>
-                            <a href="" target="_blank">[Download clean dataset via Github LFS here]</a>
+                            <a href="https://github.com/kienvinhchung/kienvinhchung.github.io/blob/main/images/project_1_bike/all_trips.csv.zip" target="_blank">[Download clean dataset via Github LFS here]</a>
                         </p>
 						<p>
 							<table style="border: 3px solid black;">
