--- a/images/project_1_bike/project_1_analysis.html
+++ b/images/project_1_bike/project_1_analysis.html
@@ -370,7 +370,7 @@ analysis</h1>
 <h5>Step 2: Load installed packages using library()</h5>
 <pre class="r"><code>library(tidyverse)</code></pre>
 <pre><code>## ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.2 ──
-## ✔ ggplot2 3.4.0      ✔ purrr   0.3.5 
+## ✔ ggplot2 3.4.1      ✔ purrr   0.3.5 
 ## ✔ tibble  3.1.8      ✔ dplyr   1.0.10
 ## ✔ tidyr   1.2.1      ✔ stringr 1.4.1 
 ## ✔ readr   2.1.3      ✔ forcats 0.5.2 
@@ -378,8 +378,7 @@ analysis</h1>
 ## ✖ dplyr::filter() masks stats::filter()
 ## ✖ dplyr::lag()    masks stats::lag()</code></pre>
 <pre class="r"><code>library(lubridate)</code></pre>
-<pre><code>## Loading required package: timechange
-## 
+<pre><code>## 
 ## Attaching package: &#39;lubridate&#39;
 ## 
 ## The following objects are masked from &#39;package:base&#39;:
@@ -553,9 +552,9 @@ day of the week of the ‘date’ column:</h5>
 <pre class="r"><code>all_trips$day_of_week &lt;- format(as.Date(all_trips$date), &quot;%A&quot;)</code></pre>
 <hr />
 </div>
-<div id="step-8-convert-weekdatday_of_week-into-numeric-values-monday-1-sunday-7" class="section level5">
-<h5>Step 8: Convert ‘weekdat’day_of_week’ into numeric values (Monday =
-1; Sunday = 7):</h5>
+<div id="step-8-convert-day_of_week-into-numeric-values-monday-1-sunday-7" class="section level5">
+<h5>Step 8: Convert ‘day_of_week’ into numeric values (Monday = 1;
+Sunday = 7):</h5>
 <pre class="r"><code>all_trips$day_of_week_num &lt;- format(as.Date(all_trips$date), &quot;%u&quot;)</code></pre>
 <hr />
 </div>
