--- a/index.html
+++ b/index.html
@@ -50,12 +50,13 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Introduction</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-briefcase">My Portfolio</span></a></li>
-								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
-								<li><a href="#education" id="education-link"><span class="icon solid fa-graduation-cap">My Education</span></a></li>
-								<li><a href="#certification" id="certification-link"><span class="icon solid fa-certificate">My Certification</span></a></li>
-								<li><a href="#resume" id="resume-link"><span class="icon solid fa-file">My Resumé</span></a></li>
-								<li><a href="#contact" id="contact-link"><span class="icon solid fa-share-nodes">Contact Me</span></a></li>
+								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-briefcase">Portfolio</span></a></li>
+								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About</span></a></li>
+								<li><a href="#education" id="education-link"><span class="icon solid fa-graduation-cap">Education</span></a></li>
+								<li><a href="#certifications" id="certifications-link"><span class="icon solid fa-certificate">Microsoft Certifications</span></a></li>
+								<li><a href="#certificates" id="certificates-link"><span class="icon solid fa-certificate">Certificates</span></a></li>
+								<li><a href="#resume" id="resume-link"><span class="icon solid fa-file">Résumé</span></a></li>
+								<li><a href="#contacts" id="contact-link"><span class="icon solid fa-share-nodes">Contacts</span></a></li>
 								<li><a href="#funfact" id="funfact-link"><span class="icon solid fa-face-smile-wink">Fun Fact</span></a></li>
 							</ul>
 						</nav>
@@ -109,7 +110,7 @@
 						<br>
 						<div class="container">
 							<header>
-								<h2>My Portfolio</h2>
+								<h2>Portfolio</h2>
 								Click the projects' image for full details
 							</header>
 
@@ -356,7 +357,7 @@
 						<br>
 						<div class="container">
 							<header>
-								<h2>My Education</h2>
+								<h2>Education</h2>
 							</header>
 
 							<div style="text-align: center; margin: 20px;">
@@ -420,12 +421,22 @@
 						<br>
 					</section>
 
-				<!-- Certification -->	
-					<section id="certification" class="five">
+				<!-- Certifications -->	
+					<section id="certifications" class="five">
 						<br>
 						<div class="container">
 							<header>
-								<h2>My Certification</h2>
+								<h2>Microsoft Certifications</h2>
+							</header>
+						</div>
+					</section>
+
+				<!-- Certificates -->	
+					<section id="certificates" class="six">
+						<br>
+						<div class="container">
+							<header>
+								<h2>Certificates of Completion</h2>
 							</header>
 
 							<p>Click the certificate for verification</p>
@@ -572,11 +583,11 @@
 					</section>
 
 				<!-- My Resume -->
-				<section id="resume" class="six">
+				<section id="resume" class="seven">
 					<br>
 					<div class="container">
 						<header>
-							<h2>My Résumé</h2>
+							<h2>Résumé</h2>
 						</header>
 						<p>Click the image to view/print the PDF file in Google Drive</p>
 						<div style="text-align: center;">
@@ -596,13 +607,13 @@
 					<br>
 				</section>
 
-				<!-- Contact -->
-					<section id="contact" class="seven">
+				<!-- Contacts -->
+					<section id="contacts" class="eight">
 						<br>
 						<div class="container">
 
 							<header>
-								<h2>Contact Me</h2>
+								<h2>Contacts</h2>
 							</header>
 
 							<p>Click the links below to connect with me!</p>
@@ -640,7 +651,7 @@
 						<br>
 					</section>
 				<!-- Fun Fact -->
-					<section id="funfact" class="eight">
+					<section id="funfact" class="nine">
 						<br>
 						<div class="container">
 							<header>
