--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-briefcase">Portfolio</span></a></li>
 								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About</span></a></li>
 								<li><a href="#education" id="education-link"><span class="icon solid fa-graduation-cap">Education</span></a></li>
-								<li><a href="#certifications" id="certifications-link"><span class="icon solid fa-certificate">Microsoft Certifications</span></a></li>
+								<li><a href="#certifications" id="certifications-link"><span class="icon solid fa-certificate">MS Certifications</span></a></li>
 								<li><a href="#certificates" id="certificates-link"><span class="icon solid fa-certificate">Certificates</span></a></li>
 								<li><a href="#resume" id="resume-link"><span class="icon solid fa-file">Résumé</span></a></li>
 								<li><a href="#contacts" id="contact-link"><span class="icon solid fa-share-nodes">Contacts</span></a></li>
@@ -428,6 +428,49 @@
 							<header>
 								<h2>Microsoft Certifications</h2>
 							</header>
+							<br>
+							<div style="text-align: center; margin-top: 0px;">
+
+								<!-- MS Power BI Analyst Certification (Coming Soon) -->
+								<!--
+								<div class="col-4 col-12-mobile" style="display: inline-block; vertical-align: top; width: 39%; margin: 0px 15px 10px 15px;">
+
+								</div>
+								-->
+								<div class="col-4 col-12-mobile" style="display: inline-block; vertical-align: top; width: 39%; margin: 0px 15px 10px 15px;">
+									<article class="item" style="margin-bottom: 5px;">
+										<div>
+											<header style="background-color: rgb(3,100,182);">
+												<h3 style="color: white;">
+												<a href="https://learn.microsoft.com/en-us/certifications/azure-data-fundamentals/" target="_blank">
+													Microsoft Azure Data Fundamentals<br>DP-900
+												</a>
+											</h3>
+												
+											</header>
+										</div>
+										<a href="images/microsoft/dp900.jpg" target="_blank" class="image fit"><img src="images/microsoft/dp900.jpg" alt="dp900"/></a>
+									</article>
+								</div>
+
+								<div class="col-4 col-12-mobile" style="display: inline-block; vertical-align: top; width: 39%; margin: 0px 15px 10px 15px;">
+									<article class="item" style="margin-bottom: 5px;">
+										<div>
+											<header style="background-color: rgb(3,100,182);">
+												<h3 style="color: white;">
+												<a href="https://learn.microsoft.com/en-us/certifications/power-bi-data-analyst-associate/" target="_blank">
+													Microsoft Power BI Data Analyst Associate<br>PL-300
+												</a>
+											</h3>
+												
+											</header>
+										</div>
+										<a href="images/microsoft/pl300.jpg" target="_blank" class="image fit"><img src="images/microsoft/pl300.jpg" alt="pl300"/></a>
+									</article>
+								</div>
+
+							</div>
+
 						</div>
 					</section>
 
