--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar_2.jpg" alt="avatar" style="border: 1px solid #2d55e7"/></span> <!-- 2 Options: avatar_1(graduation pic) OR avatar_2(business pic) -->
 							<h1 id="title" style="color: #2d55e7;">Kien Vinh Chung</h1>
-							<p>Data Science - Data Analyst</p>
+							<p>Business Analyst</p>
 						</div>
 
 					<!-- Nav -->
@@ -55,7 +55,7 @@
 								<li><a href="#education" id="education-link"><span class="icon solid fa-graduation-cap">Education</span></a></li>
 								<li><a href="#certifications" id="certifications-link"><span class="icon solid fa-certificate">MS Certifications</span></a></li>
 								<li><a href="#certificates" id="certificates-link"><span class="icon solid fa-certificate">Certificates</span></a></li>
-								<li><a href="#resume" id="resume-link"><span class="icon solid fa-file">Résumé</span></a></li>
+								<li><a href="#resume" id="resume-link"><span class="icon solid fa-file">Resumé</span></a></li>
 								<li><a href="#contacts" id="contact-link"><span class="icon solid fa-share-nodes">Contacts</span></a></li>
 								<li><a href="#funfact" id="funfact-link"><span class="icon solid fa-face-smile-wink">Fun Fact</span></a></li>
 							</ul>
@@ -97,7 +97,7 @@
 								<a href="#portfolio" class="button scrolly">Explore my Portfolio</a>
 								<br>
 								<br>
-								<a href="#resume">Jump to My Résumé</a>
+								<a href="#resume">Jump to My Resumé</a>
 							</footer>
 							<div>
 								<img class="qrcode" src="images/qr_codes/qrcodeB.png" style="padding: 3px;" alt="qr_code">
@@ -639,7 +639,7 @@
 					<br>
 					<div class="container">
 						<header>
-							<h2>Résumé</h2>
+							<h2>Resumé</h2>
 						</header>
 						<p>Click the image to view/print the PDF file in Google Drive</p>
 						<div style="text-align: center;">
